Respond from downloadsInternal.determineFilename function.

Currently this extension function doesn't officialy send a response,
hence on debug builds this results in a DCHECK failure. Fix this.
Also convert the function to UIThreadExtensionFunction.

Bug: 815362
Change-Id: Ie58dd6fe0b94079f6d9098ae74a666b01b97a1e2
Reviewed-on: https://chromium-review.googlesource.com/936007
Commit-Queue: Istiaque Ahmed <lazyboy@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539361}
Former-commit-id: f5f9fe791ff1d5985bcad10b4cabbbdbf7c6225c